fix: footer text color in dark mode

--- a/components/molecules/footer/footer.module.css
+++ b/components/molecules/footer/footer.module.css
@@ -1,3 +1,7 @@
 .footer {
   @apply max-w-screen-lg xl:max-w-screen-xl mx-auto pb-12 text-center;
 }
+
+:global(.dark) .link {
+  @apply text-white;
+}
